[package]
name = "landly-server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.11.0"
anyhow = "1.0.98"
bcrypt = "0.17.0"
convert_case = "0.8.0"
diesel = { version = "2.2.10", features = [
    "r2d2",
    "postgres",
    "chrono",
    "uuid",
    "serde_json",
]}
dotenv = "0.15.0"
env_logger = "0.11.8"
futures = "0.3.31"
jsonwebtoken = "9.3.1"
log = "0.4.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
uuid = { version = "1.16.0", features = ["v4", "serde", "v5"] }
chrono = { version = "0.4", features = ["serde"] }