[package]
name = "landly-server"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/main.rs"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.11.0"
anyhow = "1.0.98"
bcrypt = "0.17.0"
convert_case = "0.8.0"
diesel = { version = "2.2.10", features = [
    "r2d2",
    "postgres",
    "chrono",
    "uuid",
    "serde_json",
    "numeric",
]}
dotenv = "0.15.0"
env_logger = "0.11.8"
futures = "0.3.31"
jsonwebtoken = "9.3.1"
log = "0.4.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
uuid = { version = "1.17.0", features = ["v4", "serde", "v5"] }
chrono = { version = "0.4", features = ["serde"] }
utoipa = { version = "5.4", features = ["actix_extras", "uuid", "debug", "chrono"] }
utoipa-swagger-ui = { version = "9", features = ["actix-web"] }
bigdecimal = { version = "0.4.8", features = ["serde", "serde_json"] }
actix-request-reply-cache = "0.1.7"
redis = { version = "0.32", features = ["r2d2"] }
r2d2 = "0.8"
