[workspace]
resolver = "2"
members = [
    "bin/country_loader",
    "bin/country_parser",
]

[workspace.package]
publish = false
edition = "2021"

[workspace.dependencies]
landly-server = { path = "../.." }
country_loader = { path = "bin/country_loader" }
country_parser = { path = "bin/country_parser" }

#
# External crates
#

anyhow = "1.0.98"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
dotenv = "0.15.0"
uuid = { version = "1.16.0", features = ["v4", "serde", "v5"] }
